внесены правки по code review и SonarQube